# idea

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
config/: config.example.yaml
src/homesec/: __init__.py  cli.py  config.py  factory.py  pipeline.py  preview.py  storage.py  video_source.py
src/homesec/alerts/: __init__.py  base.py  dispatcher.py  email_alerter.py  events.py  logging_alerter.py  telegram_alerter.py
src/homesec/detection/: __init__.py  detector.py  types.py  yolo_backend.py
tests/: test_config.py  test_detector.py  test_dispatcher.py  test_preview.py  test_storage.py  test_video_source.py
